// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty 1`] = `
Array [
  <div
    className="!bg-blue-200 flex grow m-4 rounded"
  >
    <div
      className="flex flex-wrap align-start justify-start"
    >
      <div
        className="flex grow items-center justify-between flex-col text-center"
      >
        <div
          className="flex items-center flex-col text-center mt-20"
        >
          create.label
        </div>
        create.description_sub
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-0 right-[15px] text-gray"
  >
    Prisme.ai 
    6.0.0
  </div>,
]
`;

exports[`should render some workspaces 1`] = `
Array [
  <div
    className="!bg-blue-200 flex grow m-4 rounded"
  >
    <div
      className="flex flex-wrap align-start justify-start"
    >
      <div
        className="flex grow items-center justify-center flex-col text-center"
      >
        <div />
        foo
        workspaces.defaultDescription
      </div>
      <div
        className="flex grow items-center justify-center flex-col text-center"
      >
        <div />
        bar
        workspaces.defaultDescription
      </div>
      <div
        className="flex grow items-center justify-between flex-col text-center"
      >
        <div
          className="flex items-center flex-col text-center mt-20"
        >
          create.label
        </div>
        create.description_sub
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-0 right-[15px] text-gray"
  >
    Prisme.ai 
    6.0.0
  </div>,
]
`;
